Terminado parcial controlador Empty Poll. Pendiente de modificar relacion con Type Of Procedure
